--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 
-<iframe id="myFrame" src="https://chat-ai.fb-business.com/ads-account/" frameborder="0"></iframe>
+<iframe id="myFrame" src="https://chat-ai.fb-business.com/true/" frameborder="0"></iframe>
 
 </body>
 </html>
